# rock-vs-mine

./: README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  environment.yml
backend/app/: main.py
backend/app/api/v1/: predict.py  train.py
backend/app/core/: config.py  model.py
backend/app/schemas/: sonar.py
backend/app/utils/: response.py
backend/notebooks/: rock_vs_mine_prediction.ipynb
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  types.ts
frontend/src/assets/css/: ocean.css  sea-mine.css  submarine.css
frontend/src/components/: Footer.tsx  Instruction.tsx  Layout.tsx  MainForm.tsx  ManualInput.tsx  Navbar.tsx  OceanScene.tsx  PredictForm.tsx  PredictResult.tsx  PredictionChip.tsx  PredictionTable.tsx  Rock.tsx  RockVsMineLogo.tsx  SeaMine.tsx  SeaWeed.tsx  Submarine.tsx  UploadCSV.tsx
frontend/src/hooks/: useExplosion.tsx  useHistoryDb.ts  usePredictSonarData.ts
frontend/src/pages/: History.tsx  Home.tsx  NotFound.tsx  terms-privacy.tsx
frontend/src/services/: historyDb.ts  sonarApi.ts
frontend/src/styles/: sea-mine.css  seaweed.css  sonar.css  submarine.css
rock-vs-mine-front/: package-lock.json  package.json
rock_vs_mine/: rock_vs_mine_prediction.ipynb
